# latebra-core

./: .gitattributes  .gitignore  ANON_INTEGRATION.md  ANON_SPEND.md  CHANGELOG.md  CONTRIBUTING.md  CRYPTO_SPEC.md  Cargo.toml  DEPLOY.md  DESIGN_BRIEF.md  Dockerfile  INSTALL.md  LAUNCH.md  LICENSE-MIT  PRIVACY_ARCHITECTURE.md  PROJECT_CHECKPOINT.md  README.md  RPC.md  SECURITY.md  SPEC.md  TESTNET.md  THREAT_MODEL.md  WHITEPAPER.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/lat-attack/: Cargo.toml
crates/lat-attack/examples/: bench.rs  loadtest.rs
crates/lat-attack/src/: main.rs
crates/lat-bridge/: Cargo.toml
crates/lat-bridge/examples/: watch.rs
crates/lat-bridge/src/: adapter.rs  btc.rs  coordinator.rs  encoding.rs  evm.rs  lib.rs  sol.rs  watcher.rs
crates/lat-chain/: Cargo.toml
crates/lat-chain/src/: finality.rs  lib.rs  mempool.rs  snapshot.rs  store.rs
crates/lat-contracts/: Cargo.toml
crates/lat-contracts/src/: bonding_curve.rs  lib.rs
crates/lat-crypto/: Cargo.toml
crates/lat-crypto/src/: anon_transfer.rs  conservation.rs  hidden_solvency.rs  index_binding.rs  lib.rs  membership.rs  range.rs  ring.rs  schnorr.rs  solvent.rs  stealth.rs  transfer.rs
crates/lat-explorer/: Cargo.toml
crates/lat-explorer/src/: main.rs
crates/lat-net/: Cargo.toml
crates/lat-net/src/: lib.rs
crates/lat-node/: Cargo.toml
crates/lat-node/src/: main.rs
crates/lat-p2p/: Cargo.toml
crates/lat-p2p/src/: lib.rs
crates/lat-state/: Cargo.toml
crates/lat-state/examples/: clone_bench.rs  parallel_bench.rs  prune_bench.rs
crates/lat-state/src/: lib.rs  parallel.rs
crates/lat-store/: Cargo.toml
crates/lat-store/examples/: smt_bench.rs  store_bench.rs
crates/lat-store/src/: lib.rs  overlay.rs  redb_store.rs  smt.rs
crates/lat-types/: Cargo.toml
crates/lat-types/src/: lib.rs
crates/lat-vm/: Cargo.toml
crates/lat-vm/src/: lib.rs
crates/lat-wallet/: Cargo.toml
crates/lat-wallet-cli/: Cargo.toml
crates/lat-wallet-cli/src/: main.rs
crates/lat-wallet-web/: Cargo.toml
crates/lat-wallet-web/src/: main.rs  wallet.html
crates/lat-wallet/src/: lib.rs
crates/latebrad/: Cargo.toml
crates/latebrad/src/: main.rs
crates/latfun/: Cargo.toml
crates/latfun/src/: main.rs
scripts/: build-wallet-html.sh  local-testnet.ps1  soak-testnet.ps1
