[package]
name = "lat-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lat-chain.workspace = true

[dev-dependencies]
lat-crypto.workspace = true
lat-types.workspace = true
lat-state.workspace = true
lat-wallet.workspace = true
rand.workspace = true
