[package]
name = "lat-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "lat-node"
path = "src/main.rs"

[dependencies]
lat-crypto.workspace = true
lat-types.workspace = true
lat-state.workspace = true
lat-chain.workspace = true
lat-wallet.workspace = true
rand.workspace = true
