[package]
name = "lat-state"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lat-crypto.workspace = true
lat-types.workspace = true
lat-vm.workspace = true
lat-store.workspace = true
blake3.workspace = true

[dev-dependencies]
rand.workspace = true
