[package]
name = "lat-wallet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "lat-wallet"
path = "src/main.rs"

[dependencies]
lat-crypto.workspace = true
lat-types.workspace = true
lat-wallet.workspace = true
lat-p2p.workspace = true
lat-chain.workspace = true
rand.workspace = true
