[package]
name = "lat-wallet-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "lat-wallet-web"
path = "src/main.rs"

[dependencies]
lat-crypto.workspace = true
lat-types.workspace = true
lat-wallet.workspace = true
lat-p2p.workspace = true
rand = "0.8"
hex = "0.4"
