[package]
name = "latfun"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "latfun"
path = "src/main.rs"

[dependencies]
lat-chain.workspace = true
lat-p2p.workspace = true
lat-types.workspace = true
lat-crypto.workspace = true
lat-wallet.workspace = true
rand.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
